# zugbruecke

./: .gitignore  .readthedocs.yml  .travis-trusty.zugbruecke.json  .travis-xenial.zugbruecke.json  .travis.yml  .travis.zugbruecke.json  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HOWTORELEASE.md  HOWTORELEASE.rst  LICENSE  README.md  README.rst  hack_importlib.py  makefile  notes  pyproject.toml  requirements.txt  requirements_test.txt  run_test.py  setenv.sh  setup.cfg  setup.py
.github/workflows/: test.yaml
benchmark/: __init__.py  data.raw  maximal.py  memsync.py  minimal.py
demo_dll/: demo_dll.c  demo_dll.h  makefile
demo_dll/01/: demo_dll.c  demo_dll.h  makefile
demo_dll/02/: demo_dll.c  demo_dll.h  makefile
docs/: Makefile  __init__.py  benchmarks.rst  bugs.rst  conf.py  configclass.rst  configparameters.rst  configuration.rst  examples.rst  faq.rst  index.rst  installation.rst  interoperability.rst  introduction.rst  memsync.rst  memsyncattr.rst  memsyncprotocol.rst  security.rst  session.rst  sessionoverview.rst  support.rst  version.py  wineenv.rst
docs/_templates/: layout.html
docs/source/: __init__.py  benchmark_maximal.rst  benchmark_memsync.rst  benchmark_minimal.rst  benchmarks.rst  (+20 more)
examples/: demo_call_win.py  test_callback.py  test_client.py  test_cookbook.py  test_pycrosscall.py  test_pycrosscall_perf.py  test_server.py  test_zugbruecke.py  test_zugbruecke_perf.py
pycrosscall/: __init__.py  _server_.py  config.py  core.py  dll.py  dll_client.py  dll_server.py  interpreter.py  lib.py  log.py  routine_client.py  routine_server.py  rpc.py  win_python_install.sh  win_python_run.py  win_python_start.sh  wine.py  wine_server.py  wineserver.py  xmlrpc.py
scripts/: wenv  win_python_run.py  win_python_start.sh  wine-julia  wine-pip  wine-pytest  wine-python  wine-script
tests/: __init__.py  test_R_STRSXP.py  test_apply_filter_to_image.py  test_avg.py  test_bubblesort.py  test_bubblesort_segments.py  test_bubblesort_struct.py  test_callback_memsync.py  test_callback_optional.py  test_callback_simple.py  test_callback_simple_struct.py  test_customtype.py  test_devide.py  test_devide_dtype.py  test_distance.py  test_divide.py  test_divide_dtype.py  test_error_argtypes.py  test_error_callargs.py  test_error_memsync.py  test_error_missing_dll.py  test_error_missing_routine.py  test_error_missingdll.py  test_error_missingroutine.py  test_error_restype.py  test_fibonacci_sequence.py  test_fixedlength_arrays.py  test_fixedlength_callback.py  test_fixedlength_string.py  test_fixedlength_string_no_pointer.py  test_fixedlength_struct.py  test_float_types.py  test_gauss_elimination.py  test_gdc.py  test_get_const_int.py  test_in_mantel.py  test_int_minimal.py  test_int_types.py  test_memsync_computed_length.py  test_memsync_in_struct.py  (+24 more)
tests_old/: test_apply_filter_to_image.py  test_bubblesort.py  test_bubblesort_segments.py  test_bubblesort_struct.py  test_callback_optional.py  test_callback_simple_struct.py  test_devide.py  test_divide.py  test_error_missingdll.py  test_error_missingroutine.py  test_fibonacci_sequence.py  test_gauss_elimination.py  test_get_const_int.py  test_in_mantel.py  test_mix_rgb_colors.py  test_null_terminated_string.py  test_paths.py  test_r_strsxp.py  test_square_int_array.py  test_square_int_array_with_struct.py  test_vector3d_add.py
zugbruecke/: __init__.py  _server_.py  config.py  dll_client.py  interpreter.py  lib.py  log.py  routine_server.py  rpc.py
(+114 files in other folders)
