[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.cache
  | \.hypothesis
  | \.ipynb_checkpoints
  | \.pytest_cache
  | .ropenproject
  | _build
  | build
  | buck-out
  | demo_dll
  | dist
  | env[0-9]{2}
  | env
)/
'''

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.paths]
source = [
  "src",
  "c:\\*\\site-packages",
]
