[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zugbruecke"
description = "Calling routines in Windows DLLs from Python scripts running under Linux, MacOS or BSD"
authors = [{name = "Sebastian M. Ernst", email = "ernst@pleiszenburg.de"}]
maintainers = [{name = "Sebastian M. Ernst", email = "ernst@pleiszenburg.de"}]
keywords = ["ctypes", "wine"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = ["wenv >=0.5.1,<0.6.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System :: Operating System",
    "Topic :: System :: Operating System Kernels",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flit",
    "Jinja2",
    "python-lsp-server[all]",
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "toml",
    "twine",
]
test = [
    "hypothesis",
    "pytest<7.0",
    "coverage[toml]",
    "pytest-cov",
    "typeguard",
    "numpy",
]

[project.urls]
Home = "https://github.com/pleiszenburg/zugbruecke"
Documentation = "https://zugbruecke.readthedocs.io/en/latest/"
Source = "https://github.com/pleiszenburg/zugbruecke"

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.cache
  | \.hypothesis
  | \.ipynb_checkpoints
  | \.pytest_cache
  | .ropenproject
  | _build
  | build
  | buck-out
  | demo_dll
  | dist
  | env[0-9]{2}
  | env
)/
'''

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source_pkgs = ["zugbruecke"]

[tool.coverage.paths]
source = [
    "src/",
    "C:\\*\\Lib\\site-packages\\",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
